--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,6 @@
 - task: CmdLine@2
   inputs:
-    script: 'mklink /J "C:\Link To Folder" "C:\Users\Name\Original Folder'
+    script: |
+      echo Write your commands here
+      
+      echo Hello world
